# FUSED-Wake

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  REFERENCES.rst  docker-compose.yml  install_all.sh  requirements_dev.txt  runtests.py  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
FortranWake/: openmdao_log.txt  setup.py
docs/: Makefile  conf.py  fusedwake.ainslie.rst  fusedwake.gcl.python.rst  fusedwake.gcl.python.test.rst  fusedwake.gcl.rst  fusedwake.noj.rst  fusedwake.py4we.rst  fusedwake.py4we.test.FBG Output.MyUI.rst  fusedwake.py4we.test.FBG Output.rst  fusedwake.py4we.test.TSP.rst  fusedwake.py4we.test.rst  fusedwake.rst  fusedwake.sdwm.rst  index.rst  installation.rst  make.bat  models.rst  modules.rst  references.rst  source.rst  usage.rst
examples/: Multiple_turbine_and_multiple_heights.ipynb  Multiple_turbine_and_multiple_local_conditions_implementations_developement.ipynb  Multiple_turbines_development.ipynb  Problem_yml_wf_description.yml  Script.ipynb  Test_for_agreement_between_implementations.ipynb  Tutorial_FUSED_wake.ipynb  contributors.txt  debug_GCL_near_wake.ipynb  df_multiple_pars_senitivity.csv  (+13 more)
gclarsen/: MANIFEST.in  README.txt  openmdao_log.txt  setup.cfg  setup.py
gclarsen/docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
gclarsen/src/gclarsen/: GCLarsen.py  WindFarm.py  WindTurbine.py  fused.py  fusedwasp.py
gclarsen/src/gclarsen/test/: test_fusedwasp.py  test_gclarsen.py
gclarsen/src/gclarsen/test/wind_farms/horns_rev/: windfarm-V10.wwh
(+515 files in other folders)
