[metadata]
name = gclarsen
version = 0.1
summary =
description-file = README.txt
keywords = openmdao
home-page =
download-url =
author = Juan Pablo Murcia
author-email = jumu@dtu.dk
maintainer =
maintainer-email =
license =
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist =
obsoletes-dist =
requires-python =
	>=2.7
	<3.0
requires-externals =
project-url =

[openmdao]
copyright =
static_path = [ '_static' ]
